Correct syntax in media query for reducing number of images on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,19 +379,19 @@ ul li {
 /* Reduce the number of images displayed */
 
   @media screen and (max-width: 1250px) {
-    .gallery >:nth-last-child(1) {
+    .gallery >:nth-child(1) {
         display: none;
     }
 }
 
 @media screen and (max-width: 920px) {
-    .gallery >:nth-last-child(2) {
+    .gallery >:nth-child(2) {
         display: none;
     }
 }
 
 @media screen and (max-width: 615px) {
-    .gallery >:nth-last-child(4) {
+    .gallery >:nth-child(4) {
         display: none;
     }
 }
